# ansible-zerossl

./: .bandit  .coveragerc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  ansible.cfg  dev-setup.sh  fix_coverage.sh  galaxy.yml  inventory  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: test-automation.yml
action_plugins/: zerossl_certificate.py
docs/: API_REFERENCE.md  CHANGELOG.md  EXAMPLES.md  TESTING.md  TROUBLESHOOTING.md
meta/: runtime.yml
plugins/action/: zerossl_certificate.py
plugins/module_utils/: __init__.py
plugins/module_utils/zerossl/: __init__.py  api_client.py  cache.py  certificate_manager.py  concurrency.py  config_validator.py  exceptions.py  models.py  utils.py  validation_handler.py
scripts/: README.md  cleanup_deprecated_tests.py  comprehensive_validation.py  coverage_automation.py  fix_coverage_issues.py  performance_validation.py  test_quality_gates.py
specs/001-develop-an-ansible/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-develop-an-ansible/contracts/: ansible-plugin.yml  zerossl-api.yml
specs/002-the-original-test/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-the-original-test/contracts/: coverage-measurement-contract.md  test-execution-contract.md
tests/: README.md  __init__.py  conftest.py
tests/compatibility/: __init__.py  test_ansible_versions.py
tests/component/: test_dns_validation.py  test_error_handling.py  test_full_automation.py  test_multi_domain.py  test_renewal_check.py  test_security.py  test_split_workflow.py
tests/fixtures/: __init__.py  mock_helpers.py  sample_certificates.py  zerossl_responses.py
tests/fixtures/api_responses/: __init__.py
tests/fixtures/certificate_data/: __init__.py
tests/integration/: README.md  __init__.py  conftest.py  test_dns_validation.py  test_error_handling.py  test_full_automation.py  test_live_api_contract.py  test_live_certificate_lifecycle.py  test_multi_domain.py  test_renewal_check.py  test_security.py  test_split_workflow.py
tests/performance/: __init__.py  test_concurrency.py
tests/security/: __init__.py  test_security_audit.py
tests/unit/: __init__.py  test_api_client.py  test_certificate_manager.py  test_config_validator.py  test_coverage_measurement_validation.py  test_execution_contract_validation.py  test_mock_boundary_validation.py  test_models.py  test_plugin_contract.py  test_plugin_error_scenarios.py  test_utils.py  test_validation_handler.py  test_zerossl_api_contract.py  test_zerossl_validation_contract.py
