[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ansible-zerossl"
version = "1.0.0"
description = "Ansible action plugin for ZeroSSL certificate management"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Ansible ZeroSSL Plugin Contributors"}
]
keywords = ["ansible", "ssl", "certificate", "zerossl", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Systems Administration",
    "Topic :: Security :: Cryptography",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "ansible>=8.0.0",
    "requests>=2.31.0",
    "cryptography>=41.0.0",
    "dnspython>=2.4.0",
]


[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config --cov=plugins --cov-report=term-missing --cov-report=html:htmlcov --cov-fail-under=80"
testpaths = [
    "tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
markers = [
    "unit: Unit tests with HTTP boundary mocking only",
    "component: Component tests with real workflow methods",
    "integration: Integration tests",
    "contract: Contract validation tests",
    "slow: Slow tests (>5 seconds)",
    "network: Tests requiring network access",
    "parallel: Tests safe for parallel execution",
]

[tool.coverage.run]
source = ["plugins"]
branch = true
omit = [
    "tests/*",
    "setup.py",
    "*/conftest.py",
    "*/fixtures/*",
    "*/__init__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
title = "ZeroSSL Plugin Test Coverage"

[tool.coverage.xml]
output = "coverage.xml"

[tool.bandit]
exclude_dirs = ["tests/", "venv/", ".venv/", "build/", "dist/"]
# B108: Hardcoded temp directory is acceptable in this context (using /tmp for Ansible cache)
# B110: try-except-pass is used intentionally for cleanup operations where failures are acceptable
skips = ["B108", "B110"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-ansible>=4.0.0",
    "pytest-mock>=3.11.0",
    "pytest-xdist>=3.3.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "coverage>=7.3.0",
    "bandit>=1.8.6",
    "safety>=3.6.2",
]
